# aka

./: .gitignore  .otto.yml  CLAUDE.md  Cargo.toml  README.md  _aka  aka.yml  build.rs  default.nix
.github/workflows/: binary-release.yml
docs/: alias-caching-investigation.md  code-review-report.md  config-override-bug-analysis.md  config-path-refactoring-analysis.md  daemon-architecture.md  final-benchmark-report.md  freq-command-implementation-progress.md  home-directory-refactoring-plan.md  mocking-strategy.md  performance-analysis.md  progress.md  refactor-binary-to-lib.md  sudo-trigger-feature.md  sudo-wrapping-refactoring-plan.md  test-logging-and-daemon-isolation-fix.md  test-warnings-and-logging-fix.md  timing-instrumentation.md  version-based-daemon-restart.md
docs/design/: 2026-04-11-robustness-and-recovery.md  2026-04-27-positional-detection.md
scripts/: README.md  benchmark-daemon-vs-fallback.py  test-timing-instrumentation.sh
src/: daemon-client.rs  error.rs  lib.rs  macros.rs  main.rs  protocol.rs  system.rs  timing.rs
src/cfg/: alias.rs  loader.rs  mod.rs  spec.rs
src/shell/: init.zsh  mod.rs
tests/: actual_daemon_race_conditions.rs  alias_modification_caching_bug_test.rs  architecture_validation.rs  check_user_cache_test.rs  complete_aliases_tests.rs  config_consistency_tests.rs  config_override_validation.rs  count_output_test.rs  daemon_direct_equivalence_test.rs  daemon_error_handling_test.rs  daemon_integration_tests.rs  daemon_race_condition_test.rs  file_watching_tests.rs  freq_integration_test.rs  health_check_tests.rs  lookup_functionality_tests.rs  protocol_consistency_test.rs  sudo_flags_test.rs  sudo_transition_test.rs  sudo_wrapping_tests.rs  test_zsh_integration.sh  trace_parser_bug.rs  usage_tracking_tests.rs  user_typing_simulation.rs  variable_interpolation_tests.rs  version_check_test.rs
(+1 files in other folders)
