[package]
name = "aka"
version = "0.3.21"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "=4.5.26", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
void = "1.0.2"
shellexpand = "3.1.0"
itertools = "0.14.0"
regex = "1.11.1"
serde_yaml = "0.9"
eyre = "0.6.12"

[dev-dependencies]
tempfile = "3.15.0"
pretty_assertions = "1.4.1"
