[package]
name = "aka"
version = "0.3.21"
authors = ["Scott A. Idler <scott.a.idler@gmail.com>"]
edition = "2021"
build = "build.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
regex = "1.11.1"
serde_yaml = "0.9"
eyre = "0.6.12"
log = "0.4"
env_logger = "0.11"
dirs = "6.0"
colored = "3.0"
xxhash-rust = { version = "0.8", features = ["xxh3"] }

[dev-dependencies]
tempfile = "3.20.0"
pretty_assertions = "1.4.1"
